--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,7 +20,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Window}">
-                        <Border Padding="{Binding OuterMarginSizeThickness, FallbackValue=10}">
+                        <Border Margin="{Binding OuterMarginSizeThickness, FallbackValue=10}">
                             <Grid>
                                 <Border x:Name="Container"
                                         Background="{StaticResource BackgroundLightBrush}"
@@ -88,7 +88,8 @@
                                         </StackPanel>
                                     </Grid>
                                     <Border Grid.Row="1"
-                                            Padding="{Binding InnerContentPadding}">
+                                            Padding="{Binding InnerContentPadding}"
+                                            ClipToBounds="True">
                                         <ContentPresenter Content="{TemplateBinding Content}" />
                                     </Border>
                                 </Grid>
@@ -108,7 +109,7 @@
     <Border Background="{StaticResource WordBlueBrush}">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.Background>
@@ -117,12 +118,17 @@
                             Viewport="0 0 500 500"
                             ImageSource="/Resources/Images/Backgrounds/emoji-background.png" />
             </Grid.Background>
-            <local:SideMenuControl Grid.Column="0">
+            <local:SideMenuControl Grid.Column="0"
+                                   Width="300"
+                                   local:AnimateSlideInFromLeftProperty.Value="{Binding ApplicationViewModel.SideMenuVisible, 
+                                   Source={x:Static local:ViewModelLocator.Instance}}">
                 <local:ChatListControl />
             </local:SideMenuControl>
             <Frame Grid.Column="1"
                    x:Name="MainFrame"
-                   Content="{Binding ApplicationViewModel.CurrentPage, Source={x:Static local:ViewModelLocator.Instance}, Converter={local:ApplicationPageValueConverter}}" />
+                   Content="{Binding ApplicationViewModel.CurrentPage, 
+                   Source={x:Static local:ViewModelLocator.Instance}, 
+                   Converter={local:ApplicationPageValueConverter}}" />
         </Grid>
     </Border>
 </Window>
