--- a/Pages/ChatPage.xaml
+++ b/Pages/ChatPage.xaml
@@ -33,11 +33,50 @@
             <StackPanel Grid.Column="1"
                         Orientation="Horizontal">
                 <Button Content="{StaticResource FontAwesomeSearchIcon}"
-                        Style="{StaticResource IconButton}"/>
+                        Style="{StaticResource IconGrowButton}"/>
                 <Button Content="{StaticResource FontAwesomeEllipsisVerticalIcon}"
-                        Style="{StaticResource IconButton}" />
+                        Style="{StaticResource IconGrowButton}" />
             </StackPanel>
         </Grid>
         <local:ChatMessageListControl Grid.Row="1" />
+        <Grid Grid.Row="2"
+              MinHeight="50"
+              MaxHeight="114"
+              Background="{StaticResource ForegroundLightBrush}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"
+                    Style="{StaticResource IconGrowButton}"
+                    Content="{StaticResource FontAwesomePaperClipIcon}"
+                    VerticalAlignment="Top"
+                    Height="{Binding MinHeight, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"
+                    Foreground="{StaticResource ForegroundDarkBrush}" />
+            <TextBox Grid.Column="1"
+                     Padding="0 10"
+                     Tag="Write a message..."
+                     FontSize="{StaticResource FontSizeRegular}"
+                     VerticalAlignment="Center"
+                     BorderThickness="0"
+                     AcceptsReturn="True"
+                     AcceptsTab="True"
+                     VerticalScrollBarVisibility="Auto"/>
+            <StackPanel Grid.Column="2"
+                        Orientation="Horizontal"
+                        Margin="0 0 8 0"
+                        VerticalAlignment="Top">
+                <Button Style="{StaticResource IconGrowButton}"
+                        Content="{StaticResource FontAwesomeEmojiIcon}"
+                        Height="{Binding MinHeight, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"
+                        Foreground="{StaticResource WordOrangeBrush}" />
+                <Button Content="Send"
+                        
+                        Padding="8"
+                        Background="{StaticResource WordGreenBrush}"
+                        FontSize="{StaticResource FontSizeRegular}"/>
+            </StackPanel>
+        </Grid>
     </Grid>
 </local:BasePage>
