--- a/DialogWindow.xaml
+++ b/DialogWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="wpf_advance.MainWindow"
+﻿<Window x:Class="wpf_advance.DialogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,17 +8,14 @@
         WindowStyle="None"
         AllowsTransparency="True"
         WindowStartupLocation="CenterScreen"
-        x:Name="AppWindow"
+        ResizeMode="NoResize"
+        SizeToContent="WidthAndHeight"
         Icon="Resources/Images/logo-small.png"
-        Title="Welcome, friend!"
+        Title="{Binding Title}"
         MinWidth="{Binding WindowMinimumWidth}"
-        MinHeight="{Binding WindowMinimumHeight}"
-        Deactivated="AppWindow_Deactivated"
-        Activated="AppWindow_Activated"
-        Height="600"
-        Width="900">
+        MinHeight="{Binding WindowMinimumHeight}">
     <Window.Resources>
-        <Style TargetType="{x:Type local:MainWindow}">
+        <Style TargetType="{x:Type local:DialogWindow}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Window}">
@@ -55,34 +52,22 @@
                                                 Command="{Binding MenuCommand}">
                                             <Image Source="/Resources/Images/logo-small.png" />
                                         </Button>
-                                        <Viewbox Grid.Column="0"
-                                                 Grid.ColumnSpan="3"
-                                                 Margin="0">
-                                            <StackPanel>
-                                                <TextBlock FontFamily="{StaticResource LatoBold}"
-                                                           FontSize="{StaticResource FontSizeXLarge}"
-                                                           Margin=" 0 0 0 -5">
-                                                    <Run Text="W"
-                                                         Foreground="{StaticResource WordOrangeBrush}" />
-                                                    <Run Text="O"
-                                                         Foreground="{StaticResource WordBlueBrush}" />
-                                                    <Run Text="R"
-                                                         Foreground="{StaticResource WordRedBrush}" />
-                                                    <Run Text="D"
-                                                         Foreground="{StaticResource WordGreenBrush}" />
-                                                </TextBlock>
-                                                <TextBlock Text="wpf_advance"
-                                                           Foreground="{StaticResource ForegroundDarkBrush}"
-                                                           TextAlignment="Center" />
-                                            </StackPanel>
-                                        </Viewbox>
+                                        <TextBlock Grid.Column="1"
+                                                   Text="{Binding Title}" 
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Center"
+                                                   FontSize="{StaticResource FontSizeLarge}"
+                                                   FontFamily="{StaticResource LatoRegular}"
+                                                   Foreground="{StaticResource ForegroundVeryDarkBrush}"/>
                                         <StackPanel Grid.Column="2"
                                                     Orientation="Horizontal">
                                             <Button Content="_"
                                                     Command="{Binding MinimizeCommand}"
+                                                    Visibility="Collapsed"
                                                     Style="{StaticResource WindowControlButton}" />
                                             <Button Content="[ ]"
                                                     Command="{Binding MaximizeCommand}"
+                                                    Visibility="Collapsed"
                                                     Style="{StaticResource WindowControlButton}" />
                                             <Button Content="X"
                                                     Command="{Binding CloseCommand}"
@@ -108,35 +93,8 @@
                       CornerRadius="0"
                       GlassFrameThickness="0" />
     </WindowChrome.WindowChrome>
-    <Border Background="{StaticResource WordBlueBrush}">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Grid.Background>
-                <ImageBrush TileMode="Tile"
-                            ViewportUnits="Absolute"
-                            Viewport="0 0 500 500"
-                            ImageSource="/Resources/Images/Backgrounds/emoji-background.png" />
-            </Grid.Background>
-            <Border Grid.ColumnSpan="2"
-                    Panel.ZIndex="10"
-                    Opacity="0.3">
-                <Border Background="{StaticResource ForegroundVeryDarkBrush}"
-                        local:AnimateFadeInProperty.Value="{Binding DimmableOverlayVisible}"/>
-            </Border>
-            <local:SideMenuControl Grid.Column="0"
-                                   Width="300"
-                                   local:AnimateSlideInFromLeftProperty.Value="{Binding ApplicationViewModel.SideMenuVisible, 
-                                   Source={x:Static local:ViewModelLocator.Instance}}">
-                <local:ChatListControl />
-            </local:SideMenuControl>
-            <local:PageHost Grid.Column="1"
-                            DataContext="{Binding ApplicationViewModel.CurrentPage, 
-                            Source={x:Static local:ViewModelLocator.Instance}, 
-                            Converter={local:ApplicationPageValueConverter}}"
-                            CurrentPage="{Binding}" />
-        </Grid>
+    <Border Background="{StaticResource ForegroundLightBrush}"
+            Padding="10">
+        <ContentControl Content="{Binding Content}" />
     </Border>
 </Window>
