--- a/Controls/SettingsControl.xaml
+++ b/Controls/SettingsControl.xaml
@@ -4,9 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:wpf_advance"
-             mc:Ignorable="d"
-             d:DesignHeight="450"
-             d:DesignWidth="800">
+             mc:Ignorable="d">
     <Border Background="{StaticResource ForegroundLightBrush}"
             Padding="15">
         <Grid>
@@ -23,7 +21,7 @@
                         FontFamily="{StaticResource FontAwesome}"
                         Foreground="{StaticResource ForegroundDarkBrush}"
                         HorizontalAlignment="Left"
-                        Command="{Binding Close}"/>
+                        Command="{Binding Close}" />
                 <TextBlock FontSize="{StaticResource FontSizeLarge}"
                            Foreground="{StaticResource ForegroundVeryDarkBrush}"
                            HorizontalAlignment="Center"
@@ -34,6 +32,29 @@
                     <Run Text="Settings"
                          FontFamily="{StaticResource LatoRegular}" />
                 </TextBlock>
+            </Grid>
+            <Grid Grid.Row="1"
+                  Width="600"
+                  VerticalAlignment="Top">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="260" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Border Grid.Column="0"
+                        CornerRadius="8"
+                        Height="{Binding ActualWidth,RelativeSource={RelativeSource Self}}"
+                        Margin="0 0 30 0">
+                    <Border.Background>
+                        <ImageBrush ImageSource="/Resources/Samples/dog.jpg"
+                                    Stretch="UniformToFill" />
+                    </Border.Background>
+                </Border>
+                <StackPanel Grid.Column="1">
+                    <local:TextEntryControl />
+                    <local:TextEntryControl />
+                    <local:TextEntryControl />
+                    <local:TextEntryControl />
+                </StackPanel>
             </Grid>
         </Grid>
     </Border>
